[tool.poetry]
name = "jobserver"
version = "0.1.0"
description = ""
authors = ["sarang s babu <sarangsbabu367@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openapi-spec-validator = "^0.7.1"
sqlalchemy = "^2.0.22"
starlette = "^0.31.1"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
